removing overflow hidden. Changed the photo animation on mobile instead to fix the scroll on x

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@ body {
 .content-wrapper {
   width: 80%;
   margin: auto;
-  overflow: hidden;
 }
 
 @media screen and (max-width: 1200px) {
