--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -68,6 +68,7 @@ section{
             }
             .image-collection-mb{
                 display: block;
+                width: 100%;
                 img{
                     width: 50%;
                     border: 5px solid white;
